# bagitoJobSeeker

./: .env.example  .gitignore  LINKEDIN_ANALYSIS_GUIDE.md  Makefile  README.md  README.md.old  REPOSITORY_CLEANUP.md  SETUP_SUMMARY.md  UPDATE_SCRAPER_GUIDE.md  analyze_linkedin_structure.py  apply_from_offers.py  check_application_status.py  dashboard.py  debug_scraper.py  fresh_login.py  info.json  linkedin_posts_no_emails.txt  linkedin_structure_analysis.json  links.json  main.py  offers_2025-11-10-10-57-35.json  pyproject.toml  quick_cookie_test.py  quick_test.py  requirements.txt  test_cached_fallback.py  test_custom_scraper.py  test_email_config.py  test_linkedin_auth.py  test_linkedin_post_scraper.py  test_linkedin_posts.py  test_linkedin_scraper.py  verify_emails.py
application_pipeline/: job_application_pipeline.py
application_pipeline/application_materials/: applied.json
common/: utils.py
config/: args.py  country_examples.md  run_config.json
docs/: APPLY_FROM_OFFERS.md  CHANGES_SUMMARY.md  DOCUMENTATION.md  FALLBACK_DATA.md  GEMINI_MODEL_UPDATE.md  GMAIL_APP_PASSWORD_SETUP.md  LINKEDIN_POST_SCRAPER.md  LINKEDIN_SCRAPING_GUIDE.md  OFFERS_FILE_GUIDE.md  QUICK_START.md  SCHEDULING.md  SELENIUM_LINKEDIN_SETUP.md  TROUBLESHOOTING_NO_APPLICATIONS.md  WHY_NO_APPLICATIONS.txt
integrations/: agent.py  discord_webhook.py  mail_handler.py  seek_client.py
other/: job_seeker_pitch.pptx
scrapers/: linkedin_post_scraper.py  linkedin_selenium_scraper.py  multi_platform_scraper.py  scraper.py  seek_scraper.py
