[project]
name = "seek-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "reportlab",
    "apify_client",
    "meta_ai_api",
    "pypdf2>=3.0.1",
    "google-genai>=1.0.0",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.1",
    "curl-cffi>=0.13.0",
    "requests-toolbelt>=1.0.0",
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
]
